build_log.txt
> Task :clean

> Task :compileJava FAILED
C:\LabSoftware\BraiAn_cleanbuild\qupath-extension-braian\src\main\java\qupath\ext\braian\gui\ExperimentPane.java:283: error: cannot find symbol
        if (!isUpdatingSupplier.getAsBoolean()) {
             ^
  symbol:   variable isUpdatingSupplier
  location: class ExperimentPane
C:\LabSoftware\BraiAn_cleanbuild\qupath-extension-braian\src\main\java\qupath\ext\braian\gui\ExperimentPane.java:284: error: cannot find symbol
            onChannelNameChanged.run();
            ^
  symbol:   variable onChannelNameChanged
  location: class ExperimentPane
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: C:\LabSoftware\BraiAn_cleanbuild\qupath-extension-braian\src\main\java\qupath\ext\braian\runners\BraiAnAnalysisRunner.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors

[Incubating] Problems report is available at: file:///C:/LabSoftware/BraiAn_cleanbuild/qupath-extension-braian/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  Note: Recompile with -Xlint:deprecation for details.
  Note: C:\LabSoftware\BraiAn_cleanbuild\qupath-extension-braian\src\main\java\qupath\ext\braian\runners\BraiAnAnalysisRunner.java uses unchecked or unsafe operations.
  C:\LabSoftware\BraiAn_cleanbuild\qupath-extension-braian\src\main\java\qupath\ext\braian\gui\ExperimentPane.java:283: error: cannot find symbol
          if (!isUpdatingSupplier.getAsBoolean()) {
               ^
    symbol:   variable isUpdatingSupplier
    location: class ExperimentPane
  C:\LabSoftware\BraiAn_cleanbuild\qupath-extension-braian\src\main\java\qupath\ext\braian\gui\ExperimentPane.java:284: error: cannot find symbol
              onChannelNameChanged.run();
              ^
    symbol:   variable onChannelNameChanged
    location: class ExperimentPane
  Note: Recompile with -Xlint:unchecked for details.
  Note: Some input files use or override a deprecated API.
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 948ms
2 actionable tasks: 2 executed
